# pyo3-jni-example

./: .gitignore  README.md  settings.gradle
example-java/: build.gradle
example-java/src/main/java/com/theoremlp/demo/: SimpleJNIDemo.java
example-java/src/main/java/com/theoremlp/pex4j/: SimpleJNIDemo.java
example-java/src/test/java/com/theoremlp/demo/: SimpleJNITest.java
example-java/src/test/java/com/theoremlp/pex4j/: SimpleJNITest.java
lib/: build.gradle
lib/src/main/java/com/theoremlp/hellojni/: Library.java
lib/src/test/java/com/theoremlp/hellojni/: LibraryTest.java
pex4j-java/: build.gradle
pex4j-java/src/main/java/com/theoremlp/pex4j/: FFIDemo.java  FFITest.java  Library.java
pex4j-java/src/test/java/com/theoremlp/pex4j/: FFITest.java  LibraryTest.java
pex4j-rs/: Cargo.toml  build.gradle
pex4j-rs/src/: lib.rs
pyo3-jni/: Cargo.toml  build.gradle  build.rs
pyo3-jni/src/: lib.rs
