[package]
name = "pyo3-jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
pyo3 = { version = "0.16.5", features = ["auto-initialize"] }

[build-dependencies]
pyo3-build-config = "0.16.5"

[lib]
crate_type = ["cdylib"]
